ClipboardMonitoring: -updated getListTransferData for proper file uri support JDController: -updated getContainerLinks for proper file uri support LinkCrawler: -updated for proper file uri support MacOSApplicationAdapter: -updated for proper file uri support AddContainerAction: -updated for proper file uri support AddContainerCommand/FileCommand: -updated for proper file uri support DragDropHandler(InfoBar): -fixed dragdrop support DLCFactory/D: -fixed dlc creation, use contentURL when available ContainerPlugins: -update file regex API: -updated for proper file uri support PluginsC: -updated for proper file uri support DownloadWatchDog: -updated for proper file uri support
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@30516 ebf7c1c2-ba36-0410-9fe8-c592906822b4

Former-commit-id: 29c52e74daf31e45fd372b0a470ce815782c0323